--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UX Portfolio</title>
-    <link rel="stylesheet" href="./styles/styles2.css" />
+    <link rel="stylesheet" href="./styles/styles.css" />
 </head>
 
 <body class="container full-height-grow">
@@ -31,32 +31,39 @@
         </div>
         <div>
             <h2 class="bio-name">Luis Ramirez </h2>
-            <span style='font-size:50px;'>&#9996;</span>
-            <h3 class="bio-text">UX/UI Designer Based in Los Angeles who loves to <span class="blue-outline"> design,</span><span class="purple-outline">code,</span>& is constantly looking to<span class="saiyan"> learn</span> new things every<span class="day"> day.</span></h3>
+            <span class="peace" style='font-size:50px;'>&#9996;</span>
+            <h3 class="bio-text">UX/UI Designer based in Los Angeles who loves to <span class="blue-outline"> design, </span><span class="purple-outline">code, </span>& is always looking to<br/><span class="saiyan"> learn</span> new things every<span class="day"> day.</span></h3>
         </div>
     </section>
     <div class="projects-title">
         <h2 class="p-text">My Recent Projects</h2>
     </div>
     <section class="projects">
-        <div class="travelly">
-            <h2 class="p-title"><span class="one">&#8709;1 </span>Instagram React Clone</h2>
+        <div class="elena">
+
             <a href="https://apex-firegramx.web.app/"><img src="./img/like.jpg" alt="travelly-project" /> </a>
         </div>
         <div class="elena">
-            <h2 class="p-title">Elena Joy</h2>
+
             <a href="https://lramirez24.github.io/projects2/"><img src="./img/joy.jpg" alt="elena-project" /></a>
         </div>
         <div class="elena">
-            <h2 class="p-title">Photo Finder</h2>
+
             <a href="https://photofinder.netlify.app/"><img src="./img/rain.jpg" alt="instagram-project" /></a>
         </div>
         <div class="elena">
-            <h2 class="p-title">Reels</h2>
+
             <a href="https://ig-reels-dd3da.web.app/"><img src="./img/wood2.jpg" alt="instagram-project" /></a>
         </div>
 
-
+        <div class="intro-video">
+            <div class="intro-text2">
+                <h1 class="hide"><span class="text">Creating Inovation</span></h1>
+                <h1 class="hide"><span class="text">For Everyday</span></h1>
+                <h1 class="hide"><span class="text">People.</span></h1>
+            </div>
+        </div>
+        <div class="slider"></div>
 
 
 
