--- a/index.html
+++ b/index.html
@@ -32,51 +32,172 @@
         <div>
             <h2 class="bio-name">Luis Ramirez </h2>
             <span class="peace" style='font-size:50px;'>&#9996;</span>
-            <h3 class="bio-text">UX/UI Designer based in Los Angeles who loves to <span class="blue-outline"> design, </span><span class="purple-outline">code, </span>& is always looking to<br/><span class="saiyan"> learn</span> new things every<span class="day"> day.</span></h3>
+            <h3 class="bio-text">UX/UI designer based in Los Angeles who loves to <span class="blue-outline"> design, </span><span class="purple-outline">code, </span>& is always looking to<br/><span class="saiyan"> learn</span> new things every<span class="day"> day.</span></h3>
         </div>
     </section>
     <div class="projects-title">
         <h2 class="p-text">My Recent Projects</h2>
     </div>
-    <section class="projects">
-        <div class="elena">
 
-            <a href="https://apex-firegramx.web.app/"><img src="./img/like.jpg" alt="travelly-project" /> </a>
-        </div>
-        <div class="elena">
-
-            <a href="https://lramirez24.github.io/projects2/"><img src="./img/joy.jpg" alt="elena-project" /></a>
-        </div>
-        <div class="elena">
-
-            <a href="https://photofinder.netlify.app/"><img src="./img/rain.jpg" alt="instagram-project" /></a>
-        </div>
-        <div class="elena">
-
-            <a href="https://ig-reels-dd3da.web.app/"><img src="./img/wood2.jpg" alt="instagram-project" /></a>
-        </div>
-
-        <div class="intro-video">
-            <div class="intro-text2">
-                <h1 class="hide"><span class="text">Creating Inovation</span></h1>
-                <h1 class="hide"><span class="text">For Everyday</span></h1>
-                <h1 class="hide"><span class="text">People.</span></h1>
+    <section class="project1" style="align-self: center; margin-top: 3rem;">
+        <div class="flip-card">
+            <div class="flip-card-inner">
+                <div class="flip-card-front">
+                    <a href="/projects.html"></a>
+                    <img src="img/perfect.svg" alt="Avatar" style="width:700px;height:300px;">
+                    </a>
+                </div>
+                <div class="flip-card-back">
+                    <a href="/projects.html">
+                        <button class="btn1" style="background-color: #0cb9e4; 
+                        border: none;
+                        color: white;
+                        padding: 10px 10px 10px;
+                        position: absolute;
+                        bottom: 1;
+                        right: 0;
+                        text-align: center;
+                        text-decoration: none;
+                        display: inline-block;
+                        font-size: 16px;
+                        margin: 4px 2px;
+                        cursor: pointer; border-radius: 12px;">View Project</button>
+                    </a>
+                </div>
             </div>
         </div>
-        <div class="slider"></div>
+        <div class="flip-card">
+            <div class="flip-card-inner">
+                <div class="flip-card-front">
+                    <img src="img/anime-gram.svg" alt="Avatar" style="width:700px;height:300px;">
+                </div>
+                <div class="flip-card-back1">
+                    <a href="/projects.html">
+                        <button class="btn1" style="background-color: #e055cc; 
+                        border: none;
+                        color: white;
+                        padding: 10px 10px 10px;
+                        position: absolute;
+                        bottom: 1;
+                        right: 0;
+                        text-align: center;
+                        text-decoration: none;
+                        display: inline-block;
+                        font-size: 16px;
+                        margin: 4px 2px;
+                        cursor: pointer; border-radius: 12px;">View Project</button>
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="flip-card">
+            <div class="flip-card-inner">
+                <div class="flip-card-front">
+                    <a href="/">
+                        <img src="img/reels.svg" alt="Avatar" style="width:700px;height:300px;">
+                    </a>
+                </div>
+                <div class="flip-card-back2">
+                    <a href="/">
+                        <button class="btn1" style="background-color: #0cb9e4; 
+                        border: none;
+                        color: white;
+                        padding: 10px 10px 10px;
+                        position: absolute;
+                        position: absolute;
+                        bottom: 1;
+                        right: 0;
+                        text-align: center;
+                        text-decoration: none;
+                        display: inline-block;
+                        font-size: 16px;
+                        margin: 4px 2px;
+                        cursor: pointer; border-radius: 12px;">View Project</button>
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="flip-card">
+            <div class="flip-card-inner">
+                <div class="flip-card-front">
+                    <a href="/">
+                        <img src="img/anime-gram.svg" alt="Avatar" style="width:700px;height:300px;">
+                    </a>
+                </div>
+                <div class="flip-card-back1">
+                    <a href="/">
+                        <button class="btn1" style="background-color: #e055cc; 
+                        border: none;
+                        color: white;
+                        padding: 10px 10px 10px;
+                        position: absolute;
+                        bottom: 1;
+                        right: 0;
+                        text-align: center;
+                        text-decoration: none;
+                        display: inline-block;
+                        font-size: 16px;
+                        margin: 4px 2px;
+                        cursor: pointer; border-radius: 12px;">View Project</button>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <h4 class="connect">Let's Connect</h4>
+    <p class="connect1">Get in touch for opportunities or just to say hi! 👋</p>
+    <footer>
+        <ul class="social-footer">
+            <li class="social-icons1">
+                <a href="https://www.linkedin.com/in/luisramirez2050/"><img src="/img/linkdin.svg" alt="linkedin-social" /></a>
+            </li>
+            <li class="social-icons1">
+                <a href="https://www.instagram.com/apex_2025/"><img src="/img/insta-social.svg" alt="instagram-social" /></a>
+            </li>
+            <li class="social-icons2">
+                <a href="https://www.youtube.com/channel/UCtW0k7LJt987XEKAniALX8g?view_as=subscriber"><img src="/img/youtube.svg" alt="youtube-social" /></a>
+            </li>
+        </ul>
+    </footer>
 
+    <!-- 
+            <div class="gallery">
+        <a class="gallery1" href="https://lramirez24.github.io/projects2/"><img src="./img/redsign.png" alt="elena-project" /></a>
+        <a class="gallery2" href="https://lramirez24.github.io/projects2/"><img src="./img/insta2.svg" alt="elena-project" /></a>
+        <a class="gallery3" href="https://lramirez24.github.io/projects2/"><img src="./img/reels2.svg" alt="elena-project" /></a>
+        <a class="gallery4" href="https://lramirez24.github.io/projects2/"><img src="./img/22.svg" alt="elena-project" /></a>
+    </div>
 
+ <section class="projects">
+        <div class="elena">
 
+            <a href="https://apex-firegramx.web.app/"><img src="./img/anime-gram.svg" alt="travelly-project" /> </a>
+        </div>
+        <div class="elena">
 
+            <a href="https://lramirez24.github.io/projects2/"><img src="./img/perfect.svg" alt="elena-project" /></a>
+        </div>
+        <div class="elena">
 
+            <a href="https://photofinder.netlify.app/"><img src="./img/reels.svg" alt="instagram-project" /></a>
+        </div>
+        <div class="elena">
 
+            <a href="https://ig-reels-dd3da.web.app/"><img src="./img/perfect.svg" alt="instagram-project" /></a>
+        </div>
 
+-->
+    <div class="intro-video">
+        <div class="intro-text2">
+            <h1 class="hide"><span class="text">Creating Inovation</span></h1>
+            <h1 class="hide"><span class="text">For Everyday</span></h1>
+            <h1 class="hide"><span class="text">People.</span></h1>
+        </div>
+    </div>
+    <div class="slider"></div>
 
-
-
-
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js" integrity="sha512-IQLehpLoVS4fNzl7IfH8Iowfm5+RiMGtHykgZJl9AWMgqx0AmJ6cRWcB+GaGVtIsnC4voMfm8f2vwtY+6oPjpQ==" crossorigin="anonymous"></script>
-        <script src="./app.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js" integrity="sha512-IQLehpLoVS4fNzl7IfH8Iowfm5+RiMGtHykgZJl9AWMgqx0AmJ6cRWcB+GaGVtIsnC4voMfm8f2vwtY+6oPjpQ==" crossorigin="anonymous"></script>
+    <script src="./app.js"></script>
 </body>
 
 </html>
