fixed projects line

--- a/index.html
+++ b/index.html
@@ -93,12 +93,12 @@
         <div class="flip-card">
             <div class="flip-card-inner">
                 <div class="flip-card-front">
-                    <a href="/">
+                    <a href="/projects.html">
                         <img src="img/reels.svg" alt="Avatar" style="width:700px;height:300px;">
                     </a>
                 </div>
                 <div class="flip-card-back2">
-                    <a href="/">
+                    <a href="/projects.html">
                         <button class="btn1" style="background-color: #0cb9e4; 
                         border: none;
                         color: white;
@@ -120,12 +120,12 @@
         <div class="flip-card">
             <div class="flip-card-inner">
                 <div class="flip-card-front">
-                    <a href="/">
+                    <a href="/projects.html">
                         <img src="img/anime-gram.svg" alt="Avatar" style="width:700px;height:300px;">
                     </a>
                 </div>
                 <div class="flip-card-back1">
-                    <a href="/">
+                    <a href="/projects.html">
                         <button class="btn1" style="background-color: #e055cc; 
                         border: none;
                         color: white;
