--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                         padding: 10px 10px 10px;
                         position: absolute;
                         bottom: 1;
-                        right: 0;
+                        right: 3%;
                         text-align: center;
                         text-decoration: none;
                         display: inline-block;
@@ -79,7 +79,7 @@
                         padding: 10px 10px 10px;
                         position: absolute;
                         bottom: 1;
-                        right: 0;
+                        right: 2%;
                         text-align: center;
                         text-decoration: none;
                         display: inline-block;
@@ -106,7 +106,7 @@
                         position: absolute;
                         position: absolute;
                         bottom: 1;
-                        right: 0;
+                        right: 2%;
                         text-align: center;
                         text-decoration: none;
                         display: inline-block;
@@ -132,7 +132,7 @@
                         padding: 10px 10px 10px;
                         position: absolute;
                         bottom: 1;
-                        right: 0;
+                        right: 2%;
                         text-align: center;
                         text-decoration: none;
                         display: inline-block;
