fixed images link

--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
         <div class="flip-card">
             <div class="flip-card-inner">
                 <div class="flip-card-front">
-                    <a href="/projects.html"></a>
+                    <a href="https://lramirez24.github.io/projects2/"></a>
                     <img src="img/perfect.svg" alt="Avatar" style="width:700px;height:300px;">
                     </a>
                 </div>
                 <div class="flip-card-back">
-                    <a href="/projects.html">
+                    <a href="https://lramirez24.github.io/projects2/">
                         <button class="btn1" style="background-color: #0cb9e4; 
                         border: none;
                         color: white;
@@ -72,7 +72,7 @@
                     <img src="img/anime-gram.svg" alt="Avatar" style="width:700px;height:300px;">
                 </div>
                 <div class="flip-card-back1">
-                    <a href="/projects.html">
+                    <a href="https://apex-firegramx.web.app/">
                         <button class="btn1" style="background-color: #e055cc; 
                         border: none;
                         color: white;
@@ -93,12 +93,12 @@
         <div class="flip-card">
             <div class="flip-card-inner">
                 <div class="flip-card-front">
-                    <a href="/projects.html">
-                        <img src="img/reels.svg" alt="Avatar" style="width:700px;height:300px;">
-                    </a>
+
+                    <img src="img/reels.svg" alt="Avatar" style="width:700px;height:300px;">
+
                 </div>
                 <div class="flip-card-back2">
-                    <a href="/projects.html">
+                    <a href="https://photofinder.netlify.app/">
                         <button class="btn1" style="background-color: #0cb9e4; 
                         border: none;
                         color: white;
@@ -120,12 +120,12 @@
         <div class="flip-card">
             <div class="flip-card-inner">
                 <div class="flip-card-front">
-                    <a href="/projects.html">
-                        <img src="img/anime-gram.svg" alt="Avatar" style="width:700px;height:300px;">
-                    </a>
+
+                    <img src="img/anime-gram.svg" alt="Avatar" style="width:700px;height:300px;">
+
                 </div>
                 <div class="flip-card-back1">
-                    <a href="/projects.html">
+                    <a href="https://ig-reels-dd3da.web.app/">
                         <button class="btn1" style="background-color: #e055cc; 
                         border: none;
                         color: white;
