--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 </div>
                 <div class="flip-card-back">
                     <a href="https://lramirez24.github.io/projects2/">
-                        <button class="btn1" style="background-color: #0cb9e4; 
+                        <button class="btn1" style="background-color: #e055cc; 
                         border: none;
                         color: white;
                         padding: 10px 10px 10px;
@@ -94,12 +94,12 @@
             <div class="flip-card-inner">
                 <div class="flip-card-front">
 
-                    <img src="img/reels.svg" alt="Avatar" style="width:700px;height:300px;">
+                    <img src="img/imagely.svg" alt="Avatar" style="width:700px;height:300px;">
 
                 </div>
                 <div class="flip-card-back2">
                     <a href="https://photofinder.netlify.app/">
-                        <button class="btn1" style="background-color: #0cb9e4; 
+                        <button class="btn1" style="background-color: #e055cc; 
                         border: none;
                         color: white;
                         padding: 10px 10px 10px;
@@ -117,7 +117,9 @@
                 </div>
             </div>
         </div>
-        <div class="flip-card">
+
+        <!--
+              <div class="flip-card">
             <div class="flip-card-inner">
                 <div class="flip-card-front">
 
@@ -143,6 +145,9 @@
                 </div>
             </div>
         </div>
+
+        -->
+
     </section>
     <h4 class="connect">Let's Connect</h4>
     <p class="connect1">Get in touch for opportunities or just to say hi! 👋</p>
